@@ -356,10 +356,8 @@ Finally, install fpart (as root) :
 
 # make install
 
-Adapting fpsync(1) :
-====================
-
-(this step is not needed on FreeBSD and Linux platforms)
+Portability considerations :
+============================
 
 On OpenIndiana, if you need to use fpsync(1), the script will need adjustments :
 
@@ -367,6 +365,8 @@ On OpenIndiana, if you need to use fpsync(1), the script will need adjustments :
   variables, such as /bin/bash.
 * Adapt fpart(1) and grep(1) paths (use ggrep(1) instead of grep(1) as default
   grep(1) doesn't know about -E flag).
+
+On Alpine Linux, you will need the 'fts-dev' package to build fpart(1).
 
 See also :
 ==========
